# 8085-Microprocessor-Simulator

./: .gitignore  CMakeLists.txt  README.md
src/: 8085_main.cpp  app_controller.cpp  command.cpp  utils.cpp  view.cpp
src/include/: app_controller.hpp  command.hpp  view.hpp
